# NexaAI-Knowledge-Assistant-

./: README.md  main.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
ingestions/: document_loader.py  document_retriever.py
models/: StateSchema.py  llm.py
nodes/: Decision_node.py  Generate_from_context.py  Generate_node.py  Relevance_node.py  Reterival_node.py  Web_node.py
workflow/: graph.py
