[project]
name = "self"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "langsmith>=0.7.4",
    "pymupdf>=1.27.1",
    "streamlit>=1.54.0",
]
